Fixed login bug. Fixed create task bug that caused overlap between task and delete button.

--- a/client/public/index.css
+++ b/client/public/index.css
@@ -171,6 +171,7 @@ ul li {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
+   width: 300px;
  }
 
  .Signup {
@@ -235,6 +236,7 @@ ul li {
     display: flex;   
     justify-content: center;   
     padding-top: 20px;
+    margin: 0 auto;
 }
 
  .taskInput {
